# py2wl

./: .gitignore  DemoHardKernel.py  LICENSE  MANIFEST.in  README.md  demo.py  generate_realtests.py  generate_tests.py  perf_compare.py  perf_compare_v2.py  pyproject.toml  pyproject.toml.bak  release.py  rule_editor.py
py2wl/: __init__.py  __main__.py  jupyter.py  kernel.py  kernel.py.bak  pool.py  remote.py  server.py
py2wl.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
py2wl/compat/: __init__.py  _proxy_base.py  _proxy_base.py.bak  _state.py  cProfile.py  concurrent.py  contextlib.py  cupy.py  datetime.py  functools.py  jax.py  joblib.py  line_profiler.py  logging.py  matplotlib.py  memory_profiler.py  monitoring.py  mpl_toolkits.py  multiprocessing.py  numba.py  numpy.py  pandas.py  perf.py  psutil.py  scipy.py  seaborn.py  sklearn.py  sympy.py  tensorflow.py  time.py  timeit.py  torch.py  tqdm.py  warnings.py
py2wl/compat/_core/: ai_plugin.py  candidate_finder.py  cleaner.py  converters.py  error_classifier.py  fault_handler.py  interactor.py  kernel_ref.py  metadata.py  resolver.py  result_cache.py
py2wl/compat/_core/ai_providers/: base.py  claude.py  deepseek.py  gemini.py  groq.py
py2wl/compat/mappings/: matplotlib.yaml  monitoring.yaml  numpy.yaml  numpy.yaml.bak  numpy_extra.yaml  pandas.yaml  perf.yaml  scipy.yaml  scipy.yaml.bak  sklearn.yaml  sympy.yaml  tensorflow.yaml  torch.yaml
tests/: test_compat.py  test_fault.py  test_full.py  test_imitate.py  test_kernel_session.py  test_large_data.py  test_mappings_real.py  test_pandas.py  test_real_kernel.py
